# eval-app

./: README.md  eval-app.conf  nginx.conf
backend/: .gitignore  README.md
backend-import/: package.json  pnpm-lock.yaml
backend-import/src/: accounts.js  index.js  scores.js
backend-import/src/data/: S03_app_accounts.json  S03_app_scores.json  S04_app_scores.json  S10_app_scores.json  data.json
backend/pb_hooks/: main.pb.js  upload.pb.js
backend/pb_migrations/: 1772860924_collections_snapshot.js  1772953969_collections_snapshot.js  1773012640_collections_snapshot.js  1773057102_updated_users.js  1773225689_updated_users.js  1773238576_collections_snapshot.js  1773241140_updated_scores.js  1773241167_updated_scores.js  1773241185_updated_scores.js  1773241217_updated_uploads.js  1773292418_updated_users.js
eval/: README.md  pyproject.toml
eval/app/: main.py  ocr.py
frontend/: .env  .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: global.css  main.tsx
frontend/src/components/: AuthGuard.tsx  EvalSummary.tsx  Home.tsx  Instruction.tsx  Layout.tsx  Login.tsx  Score.tsx  Upload.tsx
frontend/src/hooks/: auth.ts  score.ts  upload.ts  user.ts
frontend/src/lib/: db.ts  env.ts
prototype/: README.md  pyproject.toml
prototype/src/: ocr_course.ipynb  ocr_instructor.ipynb
