[project]
name = "eval-app-prototype"
version = "0.1.0"
description = "Prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "openpyxl>=3.1.5",
    "pytesseract>=0.3.13",
    "rapidfuzz>=3.14.3",
    "ruff>=0.15.5",
]
